--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
     "@mui/icons-material": "^5.8.0",
-    "@mui/material": "5.8.0",
+    "@mui/lab": "^5.0.0-alpha.84",
+    "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "13.5.0",
     "@types/firebase": "3.2.1",
     "@types/jest": "27.5.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "16.11.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-router-dom": "5.3.3",
+    "axios": "0.24.0",
     "date-fns": "2.28.0",
     "firebase": "9.8.1",
-    "notistack": "2.0.5",
+    "form-data": "4.0.0",
+    "lodash": "^4.17.21",
+    "notistack": "^2.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "typescript": "4.6.4",
     "web-vitals": "2.1.4"
